--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "next": "15.1.7",
+    "react-redux": "latest",
+    "@reduxjs/toolkit": "latest",
+    "lucide-react": "latest",
+    "gsap": "latest"
   },
   "devDependencies": {
     "typescript": "^5",
